klar med spacing rektnglar och la de in i p taggen för det var enklast. adderade font och alt till newsletter och fixade input så det ser exakt ut som exemplet

--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -226,6 +226,24 @@
     background-color: #B30044;
   }
 
+  .buy{
+    position: absolute;
+    top: 74%;
+    left: 21.7%;
+    border: none;
+    height: 5%;
+    width: 10%;
+    font-size: 2rem;
+    font-family: 'kyivType sans', sans-serif;
+    color: #FFF500;
+    background-color: #000000;
+
+    &:hover{
+      background-color: #FF4B93;
+      transition: 0.3s ease-in-out;
+    }
+  }
+
   footer{
     width: 100%;
     height: 15%;
@@ -235,22 +253,41 @@
     bottom: 0%;
   }
 
-  .buy{
+  .news{
     position: absolute;
-    top: 74%;
-    left: 21.7%;
-    border: none;
+    width: 30%;
     height: 5%;
-    width: 10%;
-    font-size: 2rem;
-    font-family: 'kyivType sans';
+    top: 7%;
+    left: 5%;
     color: #FFF500;
-    background-color: #000000;
+    font-size: 1rem;
+    font-family: 'kyivType sans', sans-serif;
+  }
 
-    &:hover{
-      background-color: #FF4B93;
-      transition: 0.3s ease-in-out;
-    }
+  .email{
+    width: 20%;
+    height: 15%;
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 5%;
+    border: 2px;
+    border-radius: 20px;
+  }
+
+  .spacfoot{
+    fill: #D9D9D9;
+    display: flex;
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    margin-top: 5%;
+  }
+
+  .refoot{
+    width: 1rem;
+    height: 2rem;
+    position: relative;
   }
   
   .hidden{
